--- a/Debug/makefile
+++ b/Debug/makefile
@@ -61,7 +61,7 @@ main-build: API_Sensor_Ultrassonico.elf secondary-outputs
 
 # Tool invocations
 API_Sensor_Ultrassonico.elf API_Sensor_Ultrassonico.map: $(OBJS) $(USER_OBJS) C:\Users\Caio\STM32CubeIDE\workspace_1.10.1\API_Sensor_Ultrassonico\STM32F103RBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "API_Sensor_Ultrassonico.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Caio\STM32CubeIDE\workspace_1.10.1\API_Sensor_Ultrassonico\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="API_Sensor_Ultrassonico.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "API_Sensor_Ultrassonico.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Caio\STM32CubeIDE\workspace_1.10.1\API_Sensor_Ultrassonico\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="API_Sensor_Ultrassonico.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -u _printf_float -u _scanf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
